Fixing CreateGameLog title and function. adding RoundRobin implementation.
